--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,34 +1,24 @@
 <idea-plugin>
-  <id>ch.scalable.unwind.light</id>
-  <name>Unwind Light Theme</name>
-  <version>0.1</version>
-  <vendor email="rahel.luethy@scalable.ch" url="http://scalable.ch">Scalable Rahel Lüthy</vendor>
+    <id>ch.scalable.unwind.light</id>
+    <name>Unwind Light Theme</name>
+    <version>0.1</version>
+    <vendor email="rahel.luethy@scalable.ch" url="https://scalable.ch">Scalable Rahel Lüthy</vendor>
 
-  <description><![CDATA[A friendly theme suitable for highly-sensitive people]]></description>
+    <description><![CDATA[A friendly theme suitable for highly-sensitive people]]></description>
 
-  <change-notes><![CDATA[
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>
-    ]]>
-  </change-notes>
+    <change-notes><![CDATA[]]></change-notes>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="173.0"/>
+    <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
+    <idea-version since-build="173.0"/>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
-       on how to target different products -->
-  <!-- uncomment to enable plugin in all products
-  <depends>com.intellij.modules.lang</depends>
-  -->
+    <depends>com.intellij.modules.lang</depends>
 
-  <extensions defaultExtensionNs="com.intellij">
-    <!-- Add your extensions here -->
-    <themeProvider id="e9090f50-077b-4e9d-b4cb-53fa241f92e8"
-                   path="/unwind_light.theme.json"/>
-  </extensions>
+    <extensions defaultExtensionNs="com.intellij">
+        <themeProvider id="e9090f50-077b-4e9d-b4cb-53fa241f92e8" path="/unwind_light.theme.json"/>
+    </extensions>
 
-  <actions>
-    <!-- Add your actions here -->
-  </actions>
+    <actions>
+        <!-- Add your actions here -->
+    </actions>
 
 </idea-plugin>
